# Fea

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_commands.json
include/: lib.hpp  rnd.hpp
src/: main.cpp
